# stock-lstm-gru

./: .gitignore  README.md  pyproject.toml
.qwen/: settings.json
data/: APSE Historical Data.csv  Adani_port_stock.csv
notebooks/: analysis.ipynb  analysis_simple.ipynb
src/: data_preprocessing.py  model_gru.py  model_lstm.py  predict.py  train.py
