[project]
name = "stock-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Deep Learning Frameworks
    "tensorflow>=2.10.0",
    "keras>=2.11.0",

    # Data Processing
    "numpy>=1.23.0",
    "pandas>=1.5.0",

    # Data Visualization
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",

    # Machine Learning Utilities
    "scikit-learn>=1.1.0",

    # Data Fetching
    "yfinance>=0.2.0",

    # Configuration
    "python-dotenv>=0.21.0",

    # Jupyter (for notebooks)
    "jupyter>=1.0.0",
    "ipykernel>=6.16.0",

    # Utilities
    "tqdm>=4.64.0",
]
